[tool.poetry]
name = "tigerr-1"
version = "0.1.0"
description = ""
authors = ["iTiger <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^2.1.1"
praw = "^7.6.1"
beautifulsoup4 = "^4.11.2"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
